tests/NormalTests/paczka1/small_fuzzy/61090810.err
Error in line 1: caQsc6kH S630 93,6
Error in line 3: caQsc6kH A682 24,6
Error in line 5: S630 A682 39,3
